# TSA_NYC_Subway_Fare_Evasion_2024

./: README.md  pyproject.toml
data/: cpi.csv  high_mid_low_wage_growth.csv  mta_bus_evasion_processed.csv  mta_fare.csv  mta_subway_evasion.csv  nyc_min_wage.csv  nyc_min_wage_cleaned.csv  nyc_min_wage_nomalized.csv  theft_of_services_by_age.csv  theft_of_services_monthly.csv  urban_cpi_ny_and_north_eastern_nj.csv
data/raw_data/: MTA_Bus_Fare_Evasion__Beginning_2019.csv
notebooks/: TSA_2024.ipynb
