[project]
name = "TSA_NY_Subway_Fare_Evasion_2024"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sophia268238", email = "sophia268238@gmail.com"},
]
dependencies = [
    "pandas>=2.2.3",
    "matplotlib>=3.9.3",
    "seaborn>=0.13.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.1.1",
]
